# gaggiuino

./: .gitignore
BrewController/: BrewController.cpp  BrewController.h  BrewDB.cpp  BrewDB.h  BrewFSM.cpp  BrewFSM.cppxx  BrewFSM.h  BrewFSM.hxx  BrewHW.cpp  BrewHW.h  Cargo.toml  Makefile  Profile.cpp  Profile.h  Pump.cpp  Pump.h  Rpc.cpp  Rpc.h  SensorStructs.h  SystemFSM.cpp  SystemFSM.h  a.out  app.py  armhf_toolchain.cmake  brewController  brewCtrl.sh  brew_profile.json  brew_profiles.json  build.rs  control_log.csv  gcc_toolchain.cmake  help.txt  main.cpp  measurements.cpp  measurements.h  mydb.sqlite  web.py
BrewController/Drivers/: ADS1X15.h  Arduino.cpp  Arduino.h  AverageTempSensor.h  GenericDrivers.h  I2cBus.cpp  I2cBus.h  I2cBusLinux.cpp  MAX6675_TempSensor.cpp  MAX6675_TempSensor.h  Makefile  PSM.cpp  PSM.h  Spi.cpp  Spi.h  SpiLinux.cpp  spidev_lib++.cc
BrewController/src/: ADS1X15Wrapper.rs  AverageTempSensorWrapper.rs  BrewControllerLib.rs  BrewDBLib.rs  I2cBusLinuxWrapper.rs  LoggerLib.rs  PSMWrapper.rs  SimpleKalmanFilterLib.rs  SmoothTempSensorWrapper.rs  TempSensorWrapper.rs  main.rs
BrewController/static/: main.js  styles.css
BrewController/templates/: index.html
BrewController2/: Cargo.toml
BrewController2/src/: Driver.rs  main.rs
lib/Common/: predictive_weight.h
playground/: Makefile  gpio_control  gpio_control.cpp  gpio_control.d  gpio_control_BACKUP_10452.cpp  gpio_control_REMOTE_10452.cpp  powerAnalysys.xlsx
src/: Makefile  gaggiuino  gaggiuino.cpp  gaggiuino.h  log.cpp  log.h  pindef.h
src/Inc/: ADS1X15.h  (+3 more)
website/: setupDB
(+91 files in other folders)
