[package]
name = "BrewController"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusqlite = "0.25"
rand = "0.8"
chrono = "0.4"
libc = "0.2"
i2cdev = "0.6.0"
spidev = "0.6.0"
lazy_static = "1.4"
rust-pigpio = "0.2.0"
